--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <head>
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/el-messiri" type="text/css"/>
-    <!--<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>-->
     </head>
 
     <body>
@@ -277,5 +276,5 @@
         </main>
 
     </body>
-
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </html>
